--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "index.js"
   ],
   "author": {
-    "name": "Isaac BV",
+    "name": "ISAAC BV",
     "url": "https://www.isaac.nl"
   },
   "engines": {
